2010-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dns-mode.el (auto-mode-alist): Add entry for .zone files.

2010-05-07  Christian von Roques  <roques@mti.ag>  (tiny change)

	* mml2015.el (mml2015-epg-find-usable-key): Skip disabled key
	(Bug#5592).

2010-05-07  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-mime-pipe-part): Add optional argument `cmd'; pass
	it to mm-pipe-part.

	* mm-decode.el (mm-pipe-part): Add optional argument `cmd'; use it if
	it is given.

2010-05-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* binhex.el (binhex-decode-region-internal)
	* dns.el (dns-read-string-name, dns-write, dns-read, dns-read-type)
	(dns-query)
	* nnweb.el (nnweb-gmane-search)
	* pgg-parse.el (pgg-parse-armor)
	* pgg.el (pgg-verify-region)
	* sha1.el (sha1-string-external)
	* uudecode.el (uudecode-decode-region-internal)
	* yenc.el (yenc-decode-region): Don't run set-buffer-multibyte for
	XEmacs.

	* gnus-art.el (gnus-article-browse-html-parts)
	* gnus-group.el (gnus-read-ephemeral-gmane-group)
	(gnus-read-ephemeral-bug-grou): Use mm-make-temp-file instead of
	make-temp-file.

	* gnus-dired.el (gnus-dired-mode): Bind gnus-dired-mode-hook,
	gnus-dired-mode-on-hook and gnus-dired-mode-off-hook for XEmacs when
	compiling.

	* gnus-ml.el (gnus-mailing-list-mode): Bind gnus-mailing-list-mode-hook,
	gnus-mailing-list-mode-on-hook and gnus-mailing-list-mode-off-hook for
	XEmacs when compiling.

	* gnus-salt.el (gnus-pick-mode): Bind gnus-pick-mode-on-hook and
	gnus-pick-mode-off-hook for XEmacs when compiling.
	(gnus-binary-mode): Bind gnus-binary-mode-on-hook and
	gnus-binary-mode-off-hook for XEmacs when compiling.

	* gnus-sum.el (gnus-summary-limit-strange-charsets-predicate): Return
	nil if char-charset is not available.

	* imap.el (imap-disable-multibyte)
	* sieve-manage.el (sieve-manage-disable-multibyte): Redefine them as
	macros.

	* mm-url.el (mm-url-form-encode-xwfu): Use mm-encode-coding-string
	instead of encode-coding-string.
