@@ -1,3 +1,9 @@
+2010-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* message.el (message-forward-make-body-plain)
+	(message-forward-make-body-mml):
+	Don't use mm-with-unibyte-current-buffer.
+
 2010-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* dns-mode.el (auto-mode-alist): Add entry for .zone files.
